Move css to its own file, fit labels inside the description boxes

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,229 +3,37 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
-<style>
-
-/********** Base styles **********/
-* {
-  box-sizing: border-box;
-}
-h1 {
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-p {
-  border: 1px solid black;
-  background-color: #A3ABAD;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: black;
-  font-weight: bold;
-  padding: 10px;
-  overflow: hidden;
-}
-
-.label {
-  position: relative;
-  width: 50px;
-  border: 1px solid black;
-  font-family: Helvetica;
-  color: black;
-  padding: 10px;
-}
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/********** Small devices only **********/
-@media (max-width: 767px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-  }
-  .col-sm-1 {
-    width: 8.33%;
-  }
-  .col-sm-2 {
-    width: 16.66%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-4 {
-    width: 33.33%;
-  }
-  .col-sm-5 {
-    width: 41.66%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-7 {
-    width: 58.33%;
-  }
-  .col-sm-8 {
-    width: 66.66%;
-  }
-  .col-sm-9 {
-    width: 74.99%;
-  }
-  .col-sm-10 {
-    width: 83.33%;
-  }
-  .col-sm-11 {
-    width: 91.66%;
-  }
-  .col-sm-12 {
-    width: 100%;
-  }
-}
-
-</style>
+<title>Our Menu</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Our Menu</h1>
-
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
-    <p>
-     <!--  <p class="label">Chicken</p> -->
-      The time you won your town the race 
-      We chaired you through the market-place; 
-      Man and boy stood cheering by, 
-      And home we brought you shoulder-high. 
-
-      Today, the road all runners come, 
-      Shoulder-high we bring you home, 
-      And set you at your threshold down, 
-      Townsman of a stiller town.
-    </p>
+    <div class="item">
+      <p class="label">Milk Tea</p>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum sit amet dolor a luctus. Fusce nibh arcu, aliquam quis mi ut, cursus iaculis urna. Praesent velit eros, ullamcorper vitae vestibulum sed, consectetur vel dui. Aenean ac quam turpis. Nulla posuere hendrerit sapien, nec lobortis quam lacinia in. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vestibulum sagittis commodo. Praesent et sagittis orci. Nunc quis lacus ut lorem faucibus sagittis eget ac est. Donec quis cursus dolor. Nam tortor sem, rutrum vitae tincidunt vel, ultricies eu turpis. Nam fringilla a risus at ornare.
+      </p>
+      </p>  
+    </div>
   </div>
   <div class="col-lg-4 col-md-6 col-sm-12">
-    <p>
-     <!--  <p class="label">Beef</p> -->
-      Smart lad, to slip betimes away 
-      From fields where glory does not stay, 
-      And early though the laurel grows 
-      It withers quicker than the rose. 
-
-      Eyes the shady night has shut 
-      Cannot see the record cut, 
-      And silence sounds no worse than cheers 
-      After earth has stopped the ears. 
-    </p>
+    <div class="item">
+      <p class="label">Coffee</p>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum sit amet dolor a luctus. Fusce nibh arcu, aliquam quis mi ut, cursus iaculis urna. Praesent velit eros, ullamcorper vitae vestibulum sed, consectetur vel dui. Aenean ac quam turpis. Nulla posuere hendrerit sapien, nec lobortis quam lacinia in. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vestibulum sagittis commodo. Praesent et sagittis orci. Nunc quis lacus ut lorem faucibus sagittis eget ac est. Donec quis cursus dolor. Nam tortor sem, rutrum vitae tincidunt vel, ultricies eu turpis. Nam fringilla a risus at ornare.
+      </p>
+    </div>
   </div>
-  <div class="col-lg-4 col-md-12">
-    <p>
-      <!-- <p class="label">Sushi</p> -->
-      Now you will not swell the rout 
-      Of lads that wore their honours out, 
-      Runners whom renown outran 
-      And the name died before the man. 
-
-      So set, before its echoes fade, 
-      The fleet foot on the sill of shade, 
-      And hold to the low lintel up 
-      The still-defended challenge-cup. 
-
-      And round that early-laurelled head 
-      Will flock to gaze the strengthless dead, 
-      And find unwithered on its curls 
-      The garland briefer than a girl’s.
-    </p>
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="item">
+      <p class="label">Water</p>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum sit amet dolor a luctus. Fusce nibh arcu, aliquam quis mi ut, cursus iaculis urna. Praesent velit eros, ullamcorper vitae vestibulum sed, consectetur vel dui. Aenean ac quam turpis. Nulla posuere hendrerit sapien, nec lobortis quam lacinia in. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vestibulum sagittis commodo. Praesent et sagittis orci. Nunc quis lacus ut lorem faucibus sagittis eget ac est. Donec quis cursus dolor. Nam tortor sem, rutrum vitae tincidunt vel, ultricies eu turpis. Nam fringilla a risus at ornare.
+      </p>
+    </div>
   </div>
 </div>
-
 </body>
 </html>
